[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"
authors = ["Balaraju aka Bobby"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]